test/scc_test/stmt/semantic-errors/032.t
void test()
{
    if (1)
        ;
    else
        int a;
}